update: derbies in paper, make appendix table w/ matches

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Marc Fabel at 2020-07-22 14:30:42 +0200 
+%% Created for Marc Fabel at 2020-07-29 09:31:46 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,42 @@
 @comment{jabref-meta: databaseType:bibtex;}
 
 
+
+@misc{90min,
+	Author = {90min.de},
+	Date-Added = {2020-07-29 09:30:35 +0200},
+	Date-Modified = {2020-07-29 09:31:45 +0200},
+	Howpublished = {https://www.90min.de/posts/3729551-purer-hass-die-15-groessten-fan-feindschaften-deutschlands},
+	Note = {[Online; accessed 29-July-2020]},
+	Title = {List of largest rivalries in German Soccer},
+	Year = {2020}}
+
+@misc{derbyorg,
+	Author = {derbys.org},
+	Date-Added = {2020-07-29 09:18:16 +0200},
+	Date-Modified = {2020-07-29 09:24:55 +0200},
+	Howpublished = {https://www.derbys.org/fussballderbies/deutschland/},
+	Note = {[Online; accessed 29-July-2020]},
+	Title = {List of Socer Derbies},
+	Year = {2020}}
+
+@misc{handelsblatt_hooligans,
+	Author = {Handelsblatt},
+	Date-Added = {2020-07-29 09:14:36 +0200},
+	Date-Modified = {2020-07-29 09:15:47 +0200},
+	Howpublished = {https://www.handelsblatt.com/sport/fussball/polizei-listet-auf-in-welchen-vereinen-es-die-meisten-hooligans-gibt/7418238.html?ticket=ST-16621752-sRcSSRoVQTF4vGGt5Xvu-ap2},
+	Note = {[Online; accessed 29-July-2020]},
+	Title = {Data on the number of hooligans per club},
+	Year = {2020}}
+
+@misc{spiegel_rivals,
+	Author = {Spiegel},
+	Date-Added = {2020-07-29 08:56:37 +0200},
+	Date-Modified = {2020-07-29 09:12:19 +0200},
+	Howpublished = {https://www.spiegel.de/sport/fussball/fussball-wer-sind-die-freunde-und-rivalen-ihres-lieblingsvereins-a-1219354.html},
+	Note = {[Online; accessed 29-July-2020]},
+	Title = {Data on Friends and Rivals of German Soccer Clubs},
+	Year = {2020}}
 
 @article{wann1993sports,
 	Author = {Wann, Daniel L and Branscombe, Nyla R},
