--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Marc Fabel at 2020-07-29 09:31:46 +0200 
+%% Created for Marc Fabel at 2020-07-29 11:54:29 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,14 @@
 @comment{jabref-meta: databaseType:bibtex;}
 
 
+
+@book{cameron2005microeconometrics,
+	Author = {Cameron, A Colin and Trivedi, Pravin K},
+	Date-Added = {2020-07-29 11:53:48 +0200},
+	Date-Modified = {2020-07-29 11:54:25 +0200},
+	Publisher = {{Cambridge University Press}},
+	Title = {{Microeconometrics: Methods and Applications}},
+	Year = {2005}}
 
 @misc{90min,
 	Author = {90min.de},
