--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_robustness.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_robustness.tex
@@ -3,7 +3,7 @@
 \textbf{Econometric specification}\\
 \hspace{10pt} drop delayed games           &2.699\sym{***} &(0.288)    &21.67  & 87,928 \\
 \hspace{10pt} no population weights        &5.342\sym{***} &(0.566)    &42.90  & 88,028 \\
-\hspace{10pt} Poisson (number of assaults) &1.483\sym{***} &(0.238)    &28.55  & 87,475 \\
+\hspace{10pt} Poisson model$^1$			   &1.483\sym{***} &(0.238)    &28.55  & 87,475 \\
 \\
 \textbf{Other forms of violence}\\
 \hspace{10pt} broadly defined assaults     &5.417\sym{***} &(0.529)    &27.76  & 88,028 \\
