add police and alcohol assaults to crime data, adjust victim heterogenei

--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_subcat_victim_chars.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_subcat_victim_chars.tex
@@ -1,9 +1,9 @@
-Game day            &       2.677\sym{***}&       0.245\sym{***}&       2.432\sym{***}&       1.939\sym{***}&       0.738\sym{***}&       0.096\sym{**} \\
-                    &     (0.284)         &     (0.090)         &     (0.232)         &     (0.207)         &     (0.116)         &     (0.045)         \\
-\midrule Effect size [\%]&       21.50         &        4.99         &       32.27         &       40.43         &        9.64         &        5.40         \\
-Observations        &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         \\
-Region FE           &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Date Fe             &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Weather Controls    &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Holiday FE          &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Interact FE         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
+Game day            &       2.677\sym{***}&       0.245\sym{***}&       2.432\sym{***}&       1.939\sym{***}&       0.738\sym{***}&       0.096\sym{**} &       0.434\sym{***}\\
+                    &     (0.284)         &     (0.090)         &     (0.232)         &     (0.207)         &     (0.116)         &     (0.045)         &     (0.078)         \\
+\midrule Effect size [\%]&       21.50         &        4.99         &       32.27         &       40.43         &        9.64         &        5.40         &       96.98         \\
+Observations        &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         \\
+Region FE           &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
+Date Fe             &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
+Weather Controls    &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
+Holiday FE          &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
+Interact FE         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
