ideas for intro & background section

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Marc Fabel at 2020-07-29 11:54:29 +0200 
+%% Created for Marc Fabel at 2020-07-30 12:26:28 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,77 @@
 @comment{jabref-meta: databaseType:bibtex;}
 
 
+
+@article{zis14_15,
+	Author = {{Central Sports Intelligence Unit}},
+	Date-Added = {2020-07-30 12:22:28 +0200},
+	Date-Modified = {2020-07-30 12:26:26 +0200},
+	Journal = {{Zentrale Informationsstelle Sporteins{\"a}tze (ZIS), Landesamt f{\"u}r Zentrale Polizeiliche Dienste Nordrhein-Westfalen}},
+	Title = {Annual Report for 2014/15 Season},
+	Year = {2015}}
+
+@article{wicker2017effect,
+	Author = {Wicker, Pamela and Whitehead, John C and Johnson, Bruce K and Mason, Daniel S},
+	Date-Added = {2020-07-30 11:08:02 +0200},
+	Date-Modified = {2020-07-30 11:08:30 +0200},
+	Journal = {{Applied Economics}},
+	Number = {52},
+	Pages = {5287--5295},
+	Publisher = {Taylor \& Francis},
+	Title = {{The Effect of Sporting Success and Management Failure On Attendance Demand In The Bundesliga: A Revealed and Stated Preference Travel Cost Approach}},
+	Volume = {49},
+	Year = {2017}}
+
+@article{cook2013virtuous,
+	Author = {Cook, Philip J and Durrance, Christine Piette},
+	Date-Added = {2020-07-30 08:48:15 +0200},
+	Date-Modified = {2020-07-30 08:48:53 +0200},
+	Journal = {{Journal of Health Economics}},
+	Number = {1},
+	Pages = {261--267},
+	Publisher = {Elsevier},
+	Title = {{The virtuous tax: Lifesaving and crime-prevention effects of the 1991 federal alcohol-tax increase}},
+	Volume = {32},
+	Year = {2013}}
+
+@article{PCS2018,
+	Author = {{Police Crime Statistics}},
+	Date-Added = {2020-07-30 08:22:29 +0200},
+	Date-Modified = {2020-07-30 08:26:39 +0200},
+	Journal = {{Federal Criminal Police Office}},
+	Title = {Report 2018, abrigded version},
+	Year = {2018}}
+
+@article{montolio2019measuring,
+	Author = {Montolio, Daniel and Planells-Struse, Sim{\'o}n},
+	Date-Added = {2020-07-30 08:17:03 +0200},
+	Date-Modified = {2020-07-30 08:17:03 +0200},
+	Journal = {Journal of Economic Geography},
+	Number = {2},
+	Pages = {465--504},
+	Publisher = {Oxford University Press},
+	Title = {Measuring the negative externalities of a private leisure activity: hooligans and pickpockets around the stadium},
+	Volume = {19},
+	Year = {2019}}
+
+@article{montolio2016time,
+	Author = {Montolio, Daniel and Planells-Struse, Sim{\'o}n},
+	Date-Added = {2020-07-30 08:01:32 +0200},
+	Date-Modified = {2020-07-30 08:01:32 +0200},
+	Journal = {Regional Science and Urban Economics},
+	Pages = {99--113},
+	Publisher = {Elsevier},
+	Title = {How time shapes crime: The temporal impacts of football matches on crime},
+	Volume = {61},
+	Year = {2016}}
+
+@book{bandura1973aggression,
+	Author = {Bandura, Albert},
+	Date-Added = {2020-07-30 07:42:17 +0200},
+	Date-Modified = {2020-07-30 07:42:38 +0200},
+	Publisher = {Prentice-Hall},
+	Title = {Aggression: A social learning analysis.},
+	Year = {1973}}
 
 @book{cameron2005microeconometrics,
 	Author = {Cameron, A Colin and Trivedi, Pravin K},
