--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -195,17 +195,55 @@ labelfont={bf}
 %--------------------------------------------------------------------
 % INTRODUCTION
 %--------------------------------------------------------------------
+\newpage
 \section{Introduction}\label{sec_soc_ext:introduction}
 
 
 football is synonymous with soccer 
 
+% introductory paragraph
+- legal dispute between federal states and DFL about reimbursement of costs for high risk games
+	* develop idea of external cost
+
+
+% soccer games and strategy how to estimate causal effect
+
+% data and findings
+
+% channels 
+
+% mechanism
+		
+% back of envelope calculations
+- back of envelope: 
+	* effects of soccer games explains x\% of assault reports
+	* annual social cost of x euros (number of add. assaults * estimated social cost)
+
+% Literature
+- relevant fields of literature
+	* College football 
+		-> criminal behavior \cite{rees2009college}
+		-> sexual assault \cite{lindo2018college}
+		-> family violence \cite{card2011family}
+		
+	* soccer
+		-> how time shapes crime \cite{montolio2016time}
+		-> pickpocketing and assaults \cite{montolio2019measuring}
+	
+	
+	
+% extension literature
+- not just one city (like Barcelona): identify large effects for many instances in the league with the most spectators
+- heterogeneity in many dimensions
+- channels (not so much emotional cues, but people want to escalate during specific games)
+
+% roadmap
 
 
 %--------------------------------------------------------------------
 % BACKGROUND
 %--------------------------------------------------------------------
-\bigskip
+\newpage
 \section{Background}\label{sec_soc_ext:background}
 
 German football league system, different leagues/divisions
@@ -216,6 +254,35 @@ Bundesliga is an independent body , sperated from the German Football Associatio
 %matchplan: grundlage internationale Spiele
 %In die Vorbereitung der Spielpläne für die Bundesliga und die 2. Bundesliga fließen Vorgaben von Kommunen, Sicherheitsorganen, der Zentralen Informationsstelle Sporteinsätze (ZIS), von internationalen Fußballverbänden (FIFA/UEFA), von Fans, Clubs und Stadionbetreibern ein. Neben naheliegenden Einschränkungen wie der Tatsache, dass benachbarte Clubs versetzt zu ihren Heimspielen antreten sollten, müssen u. a. auch Feiertage, parallele Großveranstaltungen (zB Oktoberfest) oder Spieltermine internationaler Wettbewerbe (UEFA Champions League & UEFA Europa League) berücksichtigt werden.
 %https://www.bundesliga.com/de/bundesliga/news/so-entsteht-der-spielplan-bundesliga-2-bundesliga-dfl-computer-software.jsp
+
+
+
+
+\subsection{German Football League System}
+- top three professional levels with one division each: held under jurisdiction of DFB and DFL
+- Bundesliga and 2. Bundesliga: organized by German Football League (DFL)
+- 3. Liga organized by German Football Association (DFB) itself
+
+
+
+\subsection{Soccer and Violent Crime}
+- mechanisms from psychology
+	* social learning \cite{bandura1973aggression}
+	* frustration-aggression hypothesis \cite{dollard1939frustration}
+	
+- mass events: increase social contact and change how the interactions take place (in particular for smaller municipalities which attract thousands of spectators) \cite{lindo2018college}. Bundesliga has highest average attendance per match across all European main football leagues\citep{wicker2017effect}: 42,700 per match in 2018/19.
+
+- role of alcohol
+		- \cite{PCS2018}: more than every fourth assault (26.2\%) is commuted under the influence of alcohol
+		- \cite{cook2013virtuous} pharmacological effects on aggression and cognitive functioning 
+			* loss of inhibition, impairments of judgment, alcohol is anesthetic, participants of experiments show more aggressive behavior after drinking 
+		
+	
+- hooligans
+	\cite{zis14_15}
+
+- coming back to overarching theme of who pays for that
+	
 
 %--------------------------------------------------------------------
 % IDENTIFICATION
