--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -394,7 +394,7 @@ Before presenting the regression results, Figure \ref{fig_soc_ext:assault_rate_a
 Table \ref{tab_soc_ext:reg_fe_assrate} reports estimates corresponding to equation \ref{eq_soc_ext:model} when adding progressively more controls. The dependent variable is the assault rate, which is defined as the number of offenses per million population. In column 1, I include region, day-of-week, month, and year fixed effects. Column 2 adds weather controls. Holidays fixed effects are included in column 3. Column 4, controls for region specific date fixed effects. Note that although the estimates vary marginally across columns, I use throughout the paper the model presented in column 4 for subsequent analyses. The estimate from the preferred specification in column 4 suggests that a home game increases the assault rate by an average 2.677 assaults per million population. This corresponds to an increase of 21.5\% from the game-free level.
 
 % victim characteristics
-After establishing that soccer games lead to more assaults, I shed some light on who are the victims of these additional offenses. Table \ref{tab_soc_ext:reg_fe_assrate_victim_chars} shows the effect of soccer games on the assault rate by victim characteristics. First, Column 2 and 3 show the effect heterogeneity by gender. Although the estimates for women and men are statistically significant from zero, the additional victims are almost exclusively male. Male victimization rates increase by 2.432 offenses per million population. The increased assault rate for males consume more than 90\% of the effect found on the entire sample. Figure \ref{fig_soc_ext:fe_age_profile} shows the age profile of the effects for each gender separately. For women, the point estimates are small in magnitude and not significantly different from zero. The one exception are women aged 40-49 years. In contrast, the effects of adult men are throughout significant. The largest effect for males is found in the age bracket 18-29 years and is decreasing thereafter. Second, I explore effect heterogeneity by the relationship between victim and suspect. The columns 4 and 5 distinguish the relations from a formal perspective, such as kin or acquaintances. Although both estimates are positive and statistically significant, the majority of additional assaults is coming from victims who haven't had any prior connection to the suspect. The victimization rate of strangers to the suspect rises by on average 1.939 assaults per million population. This implies that almost three out of four extra cases originate from this type of victim-suspect pair. Column 6 considers spatial-social relationships, in this instance whether victim and suspect live in the same household. The assault rate in the domestic context is increasing due to a soccer game by on average 0.096 assaults per million population. This implies that only few (13\%) victims that have known the suspect also live in the same household. Taken together, the additional victims due to soccer games are young males with no prior relationship to the suspect. This description has large overlap with the population who usually gather around soccer games.
+After establishing that soccer games lead to more assaults, I shed some light on who are the victims of these additional offenses. Table \ref{tab_soc_ext:reg_fe_assrate_victim_chars} shows the effect of soccer games on the assault rate by victim characteristics. First, Column 2 and 3 show the effect heterogeneity by gender. Although the estimates for women and men are statistically significant from zero, the additional victims are almost exclusively male. Male victimization rates increase by 2.432 offenses per million population. The increased assault rate for males consume more than 90\% of the effect found on the entire sample. Figure \ref{fig_soc_ext:fe_age_profile} shows the age profile of the effects for each gender separately. For women, the point estimates are small in magnitude and not significantly different from zero. The one exception are women aged 40-49 years. In contrast, the effects of adult men are throughout significant. The largest effect for males is found in the age bracket 18-29 years and is decreasing thereafter. Second, I explore effect heterogeneity by the relationship between victim and suspect. The columns 4 and 5 distinguish the relations from a formal perspective, such as kin or acquaintances. Although both estimates are positive and statistically significant, the majority of additional assaults is coming from victims who haven't had any prior connection to the suspect. The victimization rate of strangers to the suspect rises by on average 1.939 assaults per million population. This implies that almost three out of four extra cases originate from this type of victim-suspect pair. Column 6 considers spatial-social relationships, in this instance whether victim and suspect live in the same household. The assault rate in the domestic context is increasing due to a soccer game by on average 0.096 assaults per million population. This implies that only few (13\%) victims that have known the suspect also live in the same household. Third, the effect of the victim's occupation is investigated. Column 7 shows the impact of soccer games on violent behavior experienced by police officers on duty. The victimization rate of police officers increases on average by 0.434 assaults per million population. Thus, almost 16\% of the additional assaults due to soccer games stem from attacks on police officers. Taken together, the additional victims due to soccer games are young males with no prior relationship to the suspect. This description has large overlap with the population who usually gather around soccer games.
 
 % crime characteristics
 In the next step, I consider effect heterogeneity by crime characteristics. Columns 2-5 of Table \ref{tab_soc_ext:reg_fe_assrate_crime_chars} show the heterogeneity of the effect by the time of the offense. The impact of a soccer game on the assault rate is smallest in summer months with 1.482 assaults per million population, corresponding to an increase of 13.4\%. The summer months (July and August) are the time when the soccer season starts and results are not yet so important. The estimates are higher (but not significantly different from each other) during other times of the season. Columns 6 and 7 consider effect heterogeneity by assault execution. I find that the effects of soccer games on the assault rate are mostly driven by 'successfully' committed offenses with by on average 2.310 additional assaults per million population.
@@ -798,12 +798,12 @@ Due to the nonlinearity of the model, the coefficient in Table \ref{tab_soc_ext:
 		\begin{threeparttable} \centering \caption{Effects on Assault rate, by victim characteristics}
 			\label{tab_soc_ext:reg_fe_assrate_victim_chars}
 			{\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi} 
-				\begin{tabular}{l*{6}{c}}
+				\begin{tabular}{l*{7}{c}}
 					\toprule 
-					&\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}\\
-					& & \multicolumn{2}{c}{\textbf{Gender}} & \multicolumn{3}{c}{\textbf{Victim-suspect-relationship}} \\
-					\cmidrule(lr){3-4} \cmidrule(lr){5-7}
-					& baseline & women & men & strangers$^a$ & \clb{c}{prior$^a$\\relationship} & domestic$^b$ \\
+					&\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}\\
+					& & \multicolumn{2}{c}{\textbf{Gender}} & \multicolumn{3}{c}{\textbf{Victim-suspect-relationship}} & \textbf{Occupation} \\
+					\cmidrule(lr){3-4} \cmidrule(lr){5-7} \cmidrule(lr){8-8}
+					& baseline & women & men & strangers$^a$ & \clb{c}{prior$^a$\\relationship} & domestic$^b$ & police \\
 					\midrule
 					\input{reg_fe/assrate_fixed_effects_subcat_victim_chars} 
 					\bottomrule 
