--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Marc Fabel at 2020-07-30 12:26:28 +0200 
+%% Created for Marc Fabel at 2020-08-02 20:06:00 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,15 @@
 @comment{jabref-meta: databaseType:bibtex;}
 
 
+
+@article{feltes2010fussballgewalt,
+	Author = {Feltes, Thomas},
+	Date-Added = {2020-08-02 20:03:02 +0200},
+	Date-Modified = {2020-08-02 20:05:59 +0200},
+	Journal = {Neue Praxis},
+	Number = {4},
+	Title = {{Fu{\ss}ballgewalt als misslungene Kommunikation - L{\"o}sungsans{\"a}tze abseits von Repression}},
+	Year = {2010}}
 
 @article{zis14_15,
 	Author = {{Central Sports Intelligence Unit}},
