--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -279,7 +279,7 @@ Bundesliga is an independent body , sperated from the German Football Associatio
 		
 	
 - hooligans
-	\cite{zis14_15}
+	\cite{zis14_15} \cite{feltes2010fussballgewalt}
 
 - coming back to overarching theme of who pays for that
 	
